# im_disperser

./: Cargo.toml  README.md
im_installer/: Cargo.toml
im_installer/src/: main.rs  style.css
im_installer/src/pages/: confirm_page.rs  done_page.rs  installing_page.rs  select_format_page.rs  select_path_page.rs
im_installer/src/resources/en-US/: main.flt
im_installer/src/resources/zh-CN/: main.flt
im_installer/src/utils/: localize.rs  mod.rs
src/: editor.rs  lib.rs  style.css
src/widgets/: mod.rs  params_knob.rs  spectrum_view.rs  waveform_view.rs
vizia-plug/: Cargo.toml
