[package]
name = "im_disperser"
version = "0.1.2"
edition = "2024"
license = "GPL-3.0"

[workspace]
members = ["im_installer","xtask"]

[lib]
# The `lib` artifact is needed for the standalone target
crate-type = ["cdylib", "lib"]

[dependencies]
i_am_dsp = { path = "../i_am_dsp" }
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug", features = ["standalone"] }
vizia_plug = { git = "https://github.com/vizia/vizia-plug", rev = "07ab0ec4" }
atomic_float = "0.1"
# vizia = { git = "https://github.com/vizia/vizia", rev = "c0ada337", default-features = false, features = ["baseview", "clipboard", "x11"] }
colors-transform = "0.2.11"
webbrowser = "1.0.6"
windows = { version = "0.62.2", features = ["Win32_UI_WindowsAndMessaging", "Win32_Graphics_Gdi"] }


[patch."https://github.com/RustAudio/baseview.git"]
baseview = { git = "https://github.com/john-parton/baseview.git", branch = "bugfix/srgb-not-supported" }
